[gd_scene load_steps=3 format=3 uid="uid://bfn5x154t8bag"]

[ext_resource type="Script" uid="uid://btc8jkiuogvtd" path="res://Gate.gd" id="1_uwq7d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uwq7d"]
animations = [{
"frames": [],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"opening",
"speed": 5.0
}]

[node name="Gate" type="Area2D"]
script = ExtResource("1_uwq7d")

[node name="gate_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uwq7d")
animation = &"open"

[node name="gate_collision" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
